@@ -1,10 +1,12 @@
 package eu.pb4.armorstandeditor;
 
 import net.fabricmc.loader.api.ModContainer;
+import net.fabricmc.loader.api.metadata.Person;
 import net.minecraft.text.*;
 import net.minecraft.util.Formatting;
 
 import javax.imageio.ImageIO;
+import java.net.URI;
 import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -33,13 +35,13 @@ public class GenericModInfo {
                         if (color == colorPixel) {
                             line++;
                         } else {
-                            base.append(Text.literal(chr.repeat(line)).setStyle(Style.EMPTY.withColor(color)));
+                            base.append(Text.literal(chr.repeat(line)).setStyle(Style.EMPTY.withColor(color).withShadowColor(color | 0xFF000000)));
                             color = colorPixel;
                             line = 1;
                         }
                     }
 
-                    base.append(Text.literal(chr.repeat(line)).setStyle(Style.EMPTY.withColor(color)));
+                    base.append(Text.literal(chr.repeat(line)).setStyle(Style.EMPTY.withColor(color).withShadowColor(color | 0xFF000000)));
                     icon.add(base);
                 }
             } catch (Throwable e) {
@@ -58,22 +60,22 @@ public class GenericModInfo {
             var output = new ArrayList<Text>();
 
             try {
-                about.add(Text.literal(container.getMetadata().getName()).setStyle(Style.EMPTY.withColor(0xffcc00).withBold(true).withClickEvent(new ClickEvent(ClickEvent.Action.OPEN_URL,container.getMetadata().getContact().get("github").orElse("")))));
-                about.add(Text.translatable("text.armor_stand_editor.about.version").setStyle(Style.EMPTY.withColor(0xf7e1a7))
-                        .append(Text.literal(container.getMetadata().getVersion().getFriendlyString()).setStyle(Style.EMPTY.withColor(Formatting.WHITE))));
+                about.add(Text.literal(container.getMetadata().getName()).setStyle(Style.EMPTY.withColor(0xffcc00).withBold(true).withClickEvent(new ClickEvent.OpenUrl(URI.create(container.getMetadata().getContact().get("github").orElse("https://pb4.eu"))))));
+                about.add(Text.translatable("text.armor_stand_editor.about.version",
+                        Text.literal(container.getMetadata().getVersion().getFriendlyString()).setStyle(Style.EMPTY.withColor(Formatting.WHITE))).setStyle(Style.EMPTY.withColor(0xf7e1a7)));
 
                 aboutBasic.addAll(about);
                 aboutBasic.add(Text.empty());
                 aboutBasic.add(Text.of(container.getMetadata().getDescription()));
 
                 var contributors = new ArrayList<String>();
-                contributors.addAll(container.getMetadata().getAuthors().stream().map((p) -> p.getName()).collect(Collectors.toList()));
-                contributors.addAll(container.getMetadata().getContributors().stream().map((p) -> p.getName()).collect(Collectors.toList()));
+                contributors.addAll(container.getMetadata().getAuthors().stream().map(Person::getName).toList());
+                contributors.addAll(container.getMetadata().getContributors().stream().map(Person::getName).toList());
 
                 about.add(Text.literal("")
                         .append(Text.translatable("text.armor_stand_editor.about.contributors")
                                 .setStyle(Style.EMPTY.withColor(Formatting.AQUA)
-                                        .withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT,
+                                        .withHoverEvent(new HoverEvent.ShowText(
                                                 Text.literal(String.join(", ", contributors)
                                         ))
                                 )))
